--- a/css/style.css
+++ b/css/style.css
@@ -1,20 +1,20 @@
+
+
 a, a > code {
   color: rgb(249, 38, 114);
   text-decoration: none;
 }
 
-@import url(https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz);
-@import url(https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic);
-@import url(https://fonts.googleapis.com/css?family=Fira+Sans:300,300i,400,400i,500,500i,700,700i);
-@import url(https://fonts.googleapis.com/css?family=Ubuntu+Mono:400,400i,700,700i);
 
-body { font-family: 'Fira Sans', sans-serif; }
+
+body { font-family: sans-serif; }
 h1, h2, h3 {
-  font-family: 'Fira Sans', 'Yanone Kaffeesatz';
-  font-weight: normal;
+  font-weight: bold;
 }
 
-.remark-code, .remark-inline-code { font-family: 'Ubuntu Mono', 'Lucida Console', Monaco, monospace; }
+.remark-code, .remark-inline-code { 
+  font-family: 'Ubuntu Mono', 'Lucida Console', Monaco, monospace; 
+}
 
 
 .remark-slide-content {
@@ -30,7 +30,6 @@ h1, h2, h3 {
 }
 
 .remark-slide-content > h1 {
-  font-family: 'Fira Sans';
   font-weight: normal;
   font-size: 45px;
   margin-top: -95px;
